fixed overlapping z-index on carousel and navbar

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -5,7 +5,7 @@
 .nav_container {
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 99;
   width: 100%;
   display: flex;
   justify-content: center;
